--- a/dota2tracker/src/index.css
+++ b/dota2tracker/src/index.css
@@ -12,13 +12,16 @@ h1 {
   color: #E57C23;
 }
 
-.link, .link:visited, .link:active {
+.leaguelink, .leaguelink:visited, .leaguelink:active {
   color: inherit;
   text-decoration: none;
+  margin: 0 auto;
+  font-family: 'Playfair Display', serif;
 }
 
-.link:hover {
+.leaguelink:hover,.navbar>.link:hover {
   color:#E57C23;
+  font-family: 'Playfair Display', serif;
 }
 
 .navbar {
@@ -26,8 +29,11 @@ h1 {
   justify-content: space-evenly;
 }
 
-.navbar > .link {
+.navbar > .link  {
   font-weight: 100;
   font-size: 1.5rem;
   font-kerning: none;
+  color: inherit;
+  text-decoration: none;
+  vertical-align: center;
 }
