--- a/dota2tracker/src/index.css
+++ b/dota2tracker/src/index.css
@@ -17,6 +17,7 @@ h1 {
   text-decoration: none;
   margin: 0 auto;
   font-family: 'Playfair Display', serif;
+  font-weight: 600;
 }
 
 .leaguelink:hover,.navbar>.link:hover {
@@ -38,7 +39,7 @@ h1 {
 }
 
 
-
+/* -----left right arrows on carousel----- */
 .ant-carousel .slick-prev,
 .ant-carousel .slick-prev:hover,
 .ant-carousel .slick-prev:focus {
@@ -56,7 +57,7 @@ h1 {
   z-index: 2;
   color: blueviolet;
 }
-
+/* -----left right arrows on carousel----- */
 
 
 /* --------------------------- https://loading.io/css/*/
