--- a/dota2tracker/src/index.css
+++ b/dota2tracker/src/index.css
@@ -61,6 +61,10 @@ h1 {
 
 
 /* --------------------------- https://loading.io/css/*/
+.loader {
+  text-align: center;
+}
+
 .lds-ellipsis {
   display: inline-block;
   position: relative;
