--- a/dota2tracker/src/index.css
+++ b/dota2tracker/src/index.css
@@ -10,7 +10,10 @@ body {
 
 h1 {
   color: #E57C23;
+  margin: 50px 0;
+  text-align: center;
 }
+
 
 .leaguelink, .leaguelink:visited, .leaguelink:active {
   color: inherit;
@@ -36,6 +39,32 @@ h1 {
   color: inherit;
   text-decoration: none;
   vertical-align: center;
+}
+
+.container {
+  display:flex;
+  justify-content: space-evenly;
+  align-items: center;
+}
+
+form {
+  display:flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+label {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin: 10px 0;
+}
+
+.inputfields {
+  margin: 17px 0;
+  padding: 5px;
+  border-radius: 10px;
 }
 
 
