--- a/dota2tracker/src/index.css
+++ b/dota2tracker/src/index.css
@@ -14,6 +14,13 @@ h1 {
   color: #DDE6ED;
   margin: 50px 0;
   text-align: center;
+  font-size: 3.5rem;
+}
+
+h2 {
+  color: #DDE6ED;
+  margin: 50px 0;
+  text-align: center;
 }
 
 
