--- a/dota2tracker/src/index.css
+++ b/dota2tracker/src/index.css
@@ -23,6 +23,10 @@ h2 {
   text-align: center;
 }
 
+.listrow {
+  text-align: center;
+}
+
 
 .leaguelink, .leaguelink:visited, .leaguelink:active {
   color: inherit;
