--- a/dota2tracker/src/index.css
+++ b/dota2tracker/src/index.css
@@ -27,6 +27,35 @@ h2 {
   text-align: center;
 }
 
+/* ----scrollbar---- */
+::-webkit-scrollbar {
+  /* width */
+  width: 5px;
+}
+
+::-webkit-scrollbar-track {
+  /* Track */
+  box-shadow: inset 0 0 5px grey;
+  border-radius: 8px;
+}
+
+::-webkit-scrollbar-thumb {
+  /* Handle */
+  background: rgb(110, 110, 110);
+  border-radius: 10px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  /* Handle on hover */
+  background: rgb(110, 110, 110);
+}
+
+::-webkit-scrollbar-track-piece {
+  /* not handle on */
+  background: #304158;
+}
+/* ----scrollbar---- */
+
 
 .leaguelink, .leaguelink:visited, .leaguelink:active {
   color: inherit;
