--- a/dota2tracker/src/index.css
+++ b/dota2tracker/src/index.css
@@ -119,9 +119,68 @@ label {
   margin: 35px 0;
 }
 
+.PTgrid {
+  display: grid;
+  grid-template-columns: 2fr 4fr;
+  border: 2px solid #526D82;
+  padding: 10px;
+  border-radius: 25px;
+  height:650px;
+  width:650px;
+}
+
+.item1 {
+  grid-row: 1;
+  grid-column: 1;
+}
+
+.item2 {
+  grid-row: 1 / span 2; /* Merged into a single row */
+  grid-column: 2;
+  display:flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.item3 {
+  grid-row: 2;
+  grid-column: 1;
+}
+
+.saveddatalistbox {
+  overflow: auto;
+  max-height:650px;
+}
+
+.saveddatalistbox::-webkit-scrollbar-thumb {
+  visibility:hidden;
+}
+.saveddatalistbox:hover::-webkit-scrollbar-thumb {
+  visibility:visible;
+}
+
 .saveddatalistitem {
   display:grid;
-  grid-template-columns: 1fr 1fr 1fr 1fr;
+  grid-template-columns: 2fr 1fr;
+  /* grid-template-rows: 1fr 1fr; */
+  margin:10px 0;
+  text-align: center;
+}
+
+.outlet {
+  margin: auto 0;
+}
+
+.adddiv {
+  margin-right:20px;
+  margin-bottom: 10px;
+  margin-top: 10px;
+  color: inherit;
+  position: absolute;
+}
+
+.addbutton {
+  color:white;
 }
 
 /* -----left right arrows on carousel----- */
