adds no item text, doesnt solve fetching inaccurate item list after adding new item

--- a/dota2tracker/src/index.css
+++ b/dota2tracker/src/index.css
@@ -207,6 +207,9 @@ label {
   cursor: pointer;
 }
 
+.noitems {
+  text-align: center;
+}
 
 /* -----left right arrows on carousel----- */
 .ant-carousel .slick-prev,
