--- a/dota2tracker/src/index.css
+++ b/dota2tracker/src/index.css
@@ -211,6 +211,16 @@ label {
   text-align: center;
 }
 
+.newentrybutton {
+  margin: 15px auto;
+}
+
+.newforminput {
+  margin: 12px 0;
+  padding: 5px;
+  border-radius: 10px;
+}
+
 /* -----left right arrows on carousel----- */
 .ant-carousel .slick-prev,
 .ant-carousel .slick-prev:hover,
