--- a/dota2tracker/src/index.css
+++ b/dota2tracker/src/index.css
@@ -127,6 +127,7 @@ label {
   border-radius: 25px;
   height:650px;
   width:650px;
+  column-gap: 10px;
 }
 
 .item1 {
@@ -149,7 +150,10 @@ label {
 
 .saveddatalistbox {
   overflow: auto;
-  max-height:650px;
+  height:650px;
+  background-color: #31445f;
+  border-radius: 15px;
+  padding:0 10px;
 }
 
 .saveddatalistbox::-webkit-scrollbar-thumb {
@@ -176,7 +180,7 @@ label {
   /* margin-right:20px; */
   /* margin-bottom: 10px; */
   margin-top: 10px;
-  margin-left: 12px;
+  margin-left: 1px;
   color: inherit;
   position: absolute;
   z-index: 1;
