--- a/dota2tracker/src/index.css
+++ b/dota2tracker/src/index.css
@@ -1,4 +1,12 @@
 body {
+  background-color: #27374D;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+}
+
+main {
   width: min(75ch, 100% - 2rem);
   margin-inline: auto;
   /* background-color: #025464; */
@@ -7,20 +15,22 @@ body {
   color:white;
   text-decoration: none;
   font-family: 'Roboto', sans-serif;
-  padding-top: 1%;
+  /* padding-top: 1%; */
+  margin-top: 110px;
 }
 
 h1 {
   color: #DDE6ED;
   /* margin: 50px 0; */
-  margin-bottom: 50px;
+  margin-bottom: 30px;
   text-align: center;
   font-size: 3.5rem;
 }
 
 h2 {
   color: #DDE6ED;
-  margin: 50px 0;
+  margin-top: 50px;
+  margin-bottom: 35px;
   text-align: center;
 }
 
@@ -69,13 +79,32 @@ h2 {
 }
 
 .navbar>.link:hover {
-  color:#526D82 ;
+  color:#9DB2BF ;
 }
 
 .navbar {
-  margin-bottom: 50px;
+  width:673px;
+  height:80px;
   display: flex;
   justify-content: space-evenly;
+  align-items: center;
+  z-index: inherit;
+}
+
+header {
+  background-color: #3C5368;
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  height: 80px;
+  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+
+  z-index: 10;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .navbar > .link  {
