--- a/dota2tracker/src/index.css
+++ b/dota2tracker/src/index.css
@@ -321,6 +321,20 @@ label {
   justify-content: center;
   align-items: center;
   margin-left:-40px;
+  position: relative;
+}
+
+.togglegraph {
+  position:absolute;
+  margin-top: -400px;
+  margin-left: 340px;
+  scale: 1.3;
+  opacity: 0.3;
+}
+
+.togglegraph:hover {
+  cursor: pointer;
+  opacity: 1;
 }
 
 .matchuplistitem {
@@ -405,7 +419,7 @@ label {
 .closelist {
   position: absolute;
   margin-top: -40px;
-  margin-left: 160px;
+  margin-left: 155px;
   color: #27374D;
 }
 
